processed/jira/txt/LU/LU-17686.txt
Key:        LU-17686
Summary:    Fix build Ubuntu 22.04 with 6.5.0-1013-nvidia
Link:       https://jira.whamcloud.com/browse/LU-17686
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Thu, 28 Mar 2024 02:06:13 +0000
Updated:    Thu, 28 Mar 2024 14:42:33 +0000
Resolved:   Thu, 28 Mar 2024 14:42:33 +0000

--- Description ---
Ubuntu 6.5 kernel build fails with:

  CC [M]  /home/shaun/lustre-release/lustre/llite/file.o
/home/shaun/lustre-release/lustre/llite/file.c: In function ‘ll_file_ioctl’:
/home/shaun/lustre-release/lustre/llite/file.c:4760:45: error: passing argument 1 of ‘inode_owner_or_capable’ from incompatible pointer type [-Werror=incompatible-pointer-types]
 4760 |                 if (!inode_owner_or_capable(&init_user_ns, inode))
      |                                             ^~~~~~~~~~~~~
      |                                             |
      |                                             struct user_namespace *
In file included from /home/shaun/lustre-release/libcfs/include/libcfs/linux/linux-misc.h:35,
                 from /home/shaun/lustre-release/libcfs/include/libcfs/libcfs.h:43,
                 from /home/shaun/lustre-release/lustre/include/lustre_lib.h:49,
                 from /home/shaun/lustre-release/lustre/include/lustre_dlm.h:46,
                 from /home/shaun/lustre-release/lustre/llite/file.c:39:
include/linux/fs.h:1760:47: note: expected ‘struct mnt_idmap *’ but argument is of type ‘struct user_namespace *’
 1760 | bool inode_owner_or_capable(struct mnt_idmap *idmap,
      |                             ~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors

--- Comment (stancheff, Thu, 28 Mar 2024 14:42:33 +0000) ---
Duplicates https://jira.whamcloud.com/browse/LU-17674

--- Comment (gerrit, Thu, 28 Mar 2024 02:08:30 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54592

Subject: LU-17686 build: use idmap for userns arguments

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: e93f1e67cc34c301a37d61785b2cbe0b5ff1e046
